--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,20 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <!--https://maven.apache.org/surefire/maven-failsafe-plugin/-->
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
