Basic UI test setup

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
     <properties>
         <java.version>11</java.version>
         <testcontainers.version>1.17.3</testcontainers.version>
+        <selenide.version>6.10.1</selenide.version>
+        <!--Spring Boot's dependency management selects an incompatible Selenium version-->
+        <selenium.version>4.6.0</selenium.version>
     </properties>
 
     <dependencyManagement>
@@ -104,6 +107,12 @@
             <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>selenium</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -130,6 +139,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>${selenide.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
